--- a/conFusion/package.json
+++ b/conFusion/package.json
@@ -4,16 +4,21 @@
   "description": "This is a website for Ristorante Con Fusion",
   "main": "index.html",
   "scripts": {
-    "start": "npm run lite",
+    "start": "npm run watch:all",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lite": "lite-server",
-    "sass": "node-sass -o css/ css/"
+    "sass": "node-sass -o css/ css/",
+    "watch:scss": "onchange 'css/*.scss' -- npm run sass",
+    "watch:all": "parallelshell 'npm run watch:scss' 'npm run lite'"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "lite-server": "^2.3.0",
-    "node-sass": "^5.0.0"
+    "node-sass": "^5.0.0",
+    "onchange": "^3.3.0",
+    "parallelshell": "3.0.1",
+    "rimraf": "^2.6.2"
   },
   "dependencies": {
     "bootstrap": "^4.0.0",
