--- a/conFusion/package.json
+++ b/conFusion/package.json
@@ -20,14 +20,18 @@
   "license": "ISC",
   "devDependencies": {
     "cssmin": "^0.4.3",
+    "grunt": "^1.0.2",
+    "grunt-sass": "^3.1.0",
     "htmlmin": "^0.0.7",
+    "jit-grunt": "^0.10.0",
     "lite-server": "^2.3.0",
     "node-sass": "^5.0.0",
-    "onchange": "^3.3.0",
+    "onchange": "^7.1.0",
     "parallelshell": "3.0.1",
     "rimraf": "^2.6.2",
+    "time-grunt": "^2.0.0",
     "uglifyjs": "^2.4.11",
-    "usemin-cli": "^0.5.1"
+    "usemin-cli": "^0.6.0"
   },
   "dependencies": {
     "bootstrap": "^4.0.0",
