--- a/conFusion/package.json
+++ b/conFusion/package.json
@@ -19,6 +19,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "browser-sync": "^2.26.14",
     "cssmin": "^0.4.3",
     "grunt": "^1.0.2",
     "grunt-browser-sync": "^2.2.0",
@@ -32,7 +33,8 @@
     "grunt-contrib-watch": "^1.0.0",
     "grunt-filerev": "^2.3.1",
     "grunt-sass": "^3.1.0",
-    "grunt-usemin": "^3.1.1",
+    "grunt-usemin": "^0.1.13",
+    "gulp": "^4.0.2",
     "htmlmin": "^0.0.7",
     "jit-grunt": "^0.10.0",
     "lite-server": "^2.3.0",
