--- a/conFusion/package.json
+++ b/conFusion/package.json
@@ -35,6 +35,7 @@
     "grunt-sass": "^3.1.0",
     "grunt-usemin": "^0.1.13",
     "gulp": "^4.0.2",
+    "gulp-sass": "^3.1.0",
     "htmlmin": "^0.0.7",
     "jit-grunt": "^0.10.0",
     "lite-server": "^2.3.0",
